@@ -1,6 +1,7 @@
 package br.com.fiap.fintech_backend.service;
 
 import br.com.fiap.fintech_backend.model.Meta;
+import br.com.fiap.fintech_backend.model.Usuario;
 import br.com.fiap.fintech_backend.repository.MetaRepository;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -8,11 +9,11 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
-import java.util.Collections;
+import java.util.ArrayList;
+import java.util.List;
 import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -24,10 +25,21 @@ public class MetaServiceTest {
     @Mock
     private MetaRepository metaRepository;
 
+    @Mock
+    private UsuarioService usuarioService;
+
     @Test
     public void testFindAll() {
-        when(metaRepository.findAll()).thenReturn(Collections.singletonList(new Meta()));
-        assertEquals(1, metaService.findAll().size());
+        Usuario usuario = new Usuario();
+        usuario.setMetas(List.of(new Meta()));
+        when(usuarioService.findById(1L)).thenReturn(Optional.of(usuario));
+        assertEquals(1, metaService.findAll(1L).size());
+    }
+
+    @Test
+    public void testFindAllUsuarioSemMetas() {
+        when(usuarioService.findById(1L)).thenReturn(Optional.of(new Usuario()));
+        assertEquals(0, metaService.findAll(1L).size());
     }
 
     @Test
@@ -39,14 +51,37 @@ public class MetaServiceTest {
     @Test
     public void testSave() {
         Meta meta = new Meta();
+        Usuario usuario = new Usuario();
+        usuario.setMetas(new ArrayList<>());
+
+        when(usuarioService.findById(1L)).thenReturn(Optional.of(usuario));
         when(metaRepository.save(meta)).thenReturn(meta);
-        assertEquals(meta, metaService.save(meta));
+
+        Meta result = metaService.save(1L, meta);
+
+        assertEquals(meta, result);
+        assertTrue(usuario.getMetas().contains(meta));
+        verify(usuarioService, times(1)).save(usuario);
+    }
+
+    @Test
+    public void testUpdate() {
+        Meta meta = new Meta();
+        when(metaRepository.save(meta)).thenReturn(meta);
+        assertEquals(meta, metaService.update(meta));
     }
 
     @Test
     public void testDeleteById() {
         when(metaRepository.existsById(1L)).thenReturn(true);
-        metaService.deleteById(1L);
+        assertTrue(metaService.deleteById(1L));
         verify(metaRepository, times(1)).deleteById(1L);
+    }
+
+    @Test
+    public void testDeleteByIdNotFound() {
+        when(metaRepository.existsById(1L)).thenReturn(false);
+        assertFalse(metaService.deleteById(1L));
+        verify(metaRepository, never()).deleteById(1L);
     }
 }
