@@ -1,6 +1,8 @@
 package br.com.fiap.fintech_backend.service;
 
+import br.com.fiap.fintech_backend.model.Conta;
 import br.com.fiap.fintech_backend.model.Transacao;
+import br.com.fiap.fintech_backend.model.Usuario;
 import br.com.fiap.fintech_backend.repository.TransacaoRepository;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -9,10 +11,10 @@ import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
 import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.*;
 import static org.mockito.Mockito.*;
 
 @ExtendWith(MockitoExtension.class)
@@ -24,10 +26,25 @@ public class TransacaoServiceTest {
     @Mock
     private TransacaoRepository transacaoRepository;
 
+    @Mock
+    private UsuarioService usuarioService;
+
     @Test
     public void testFindAll() {
-        when(transacaoRepository.findAll()).thenReturn(Collections.singletonList(new Transacao()));
-        assertEquals(1, transacaoService.findAll().size());
+        Usuario usuario = new Usuario();
+        Conta conta = new Conta();
+        usuario.setContas(List.of(conta));
+
+        when(usuarioService.findById(1L)).thenReturn(Optional.of(usuario));
+        when(transacaoRepository.findByConta(conta)).thenReturn(Optional.of(new Transacao()));
+
+        assertEquals(1, transacaoService.findAll(1L).size());
+    }
+
+    @Test
+    public void testFindAllUsuarioSemConta() {
+        when(usuarioService.findById(1L)).thenReturn(Optional.of(new Usuario()));
+        assertEquals(0, transacaoService.findAll(1L).size());
     }
 
     @Test
@@ -46,7 +63,14 @@ public class TransacaoServiceTest {
     @Test
     public void testDeleteById() {
         when(transacaoRepository.existsById(1L)).thenReturn(true);
-        transacaoService.deleteById(1L);
+        assertTrue(transacaoService.deleteById(1L));
         verify(transacaoRepository, times(1)).deleteById(1L);
+    }
+
+    @Test
+    public void testDeleteByIdNotFound() {
+        when(transacaoRepository.existsById(1L)).thenReturn(false);
+        assertFalse(transacaoService.deleteById(1L));
+        verify(transacaoRepository, never()).deleteById(1L);
     }
 }
